# slice-stacker

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
scripts/: create_venv.sh
src/slice_stacker/: __init__.py  do_focus_stack.sh  focus_stack.py  rail_stack.py
