[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slice-stacker"
version = "0.1.0"
description = "Focus stacking tools for macro photography"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "radmer"}
]
keywords = ["photography", "focus-stacking", "macro", "image-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "numpy",
    "opencv-python",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
focus-stack = "slice_stacker.focus_stack:main"
rail-stack = "slice_stacker.rail_stack:main"

[project.urls]
Homepage = "https://github.com/radmer/slice-stacker"
Repository = "https://github.com/radmer/slice-stacker"
Issues = "https://github.com/radmer/slice-stacker/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
